# hackathon_ia_minds

./: .env  .env.example  .gitignore  README.md  docker-compose.dokploy.yml  docker-compose.telegram.yml  docker-compose.yml  init-data.sh  package.json  verify-and-load-data.sh  verify-deployment.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.data-loader  init_data.sql  init_db.sql  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  dependencies.py  websocket.py
backend/app/ml/: __init__.py  evaluation.py  features.py  inference.py  recommendation_templates.py
backend/app/ml/anomaly/: __init__.py  ensemble_detector.py  (+2 more)
backend/app/models/: __init__.py  anomaly.py  consumption.py  prediction.py  recommendation.py
backend/app/repositories/: __init__.py  anomaly_repository.py  base_repository.py  consumption_repository.py  prediction_repository.py  recommendation_repository.py
backend/app/schemas/: __init__.py  anomaly.py  consumption.py  prediction.py  recommendation.py
backend/app/services/: __init__.py  alert_service.py  analytics_service.py  anomaly_service.py  prediction_service.py  recommendation_service.py
backend/ml_models/: anomaly_detector.joblib  energy_predictor.joblib
backend/newmodels/: modelo_co2.pkl  preprocesamiento_info.json
backend/scripts/: generate_historical_anomalies.py  init_sqlite.py  load_consumption_data.py  load_data_sqlite.py
backend/telegram_bot/: app.py
backend/tools/: telegram_bot.py
(+79 files in other folders)
